# Global-Supply-Chain-Disruption-Resilience-MLOps-Project

./: .env.example  .gitignore  Makefile  README.md  main.py  mlflow.db  params.yaml  pyproject.toml  requirements.txt
k8s/: kubernetes.yaml
mlartifacts/1/a75e22a9e38140ee9168a430a1fa9e43/artifacts/: estimator.html
mlartifacts/1/models/m-2f54571e725f45d3b42af74e9ca79d90/artifacts/: MLmodel  model.pkl
mlartifacts/1/models/m-430a6aef5cd64cbfa8e109a2a6a802b0/artifacts/: MLmodel  python_env.yaml
mlartifacts/1/models/m-84e8c14abf5142328f8152d568cefc76/artifacts/: MLmodel
mlartifacts/1/models/m-89f4fa26bc89452e96d8008f4cbe2a21/artifacts/: MLmodel  conda.yaml
models/: .gitignore
scripts/: minikube-cleanup.sh  minikube-redeploy.sh
src/: data_model.py
src/models/: predict_model.py  train_model.py
